terminei edição do rodape com

--- a/style.css
+++ b/style.css
@@ -3,6 +3,7 @@
     --cinza-secundario: #C0C0C0;
     --botao-azul: #167BF7;
     --cor-de-fundo: #00030C;
+    --botao-azul-efeito: #3c92fa;
 
     --font-principal: 'Inter';
 }
@@ -121,31 +122,42 @@ body {
 }
 
 .rodape {
-    position: relative;
-    font-family: var(--font-principal)
+    text-align: center;
+    margin: 5em 3em;
 }
 
 .rodape__logo{
-    position: absolute;
-    left: 600px;
-    top: -70px;
+    margin: 0 50%;
 }
 
 .rodape__lista {
     display: flex;
     list-style-type: none;
-    margin: 20px 100px 20px 100px;
-    justify-content: space-between;
+    margin: 1em 0;
+    justify-content: center;
 }
 
-.lista__link {
-    font-weight: 400;
-    align-items: center;
+.lista__link a {
+    color: var(--branco-principal);
+    text-decoration: none;
+    font-size: 1em;
+    margin-left: 1em;    
 }
 
 .rodape__texto {
-    text-align: center;
     font-size: 14px;
     color: var(--cinza-secundario);
-    
+}
+
+.lista__link a:hover {
+    color: var(--botao-azul);
+}
+
+.lista__link a:active {
+    color: purple;
+}
+
+.container__botao:hover {
+    background-color: var(--botao-azul-efeito);
+    color: var(--cor-de-fundo);
 }
